--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -25,6 +25,13 @@ jobs:
 
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
 
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '1.22.4'
+      - run: flutter pub get
+      - run: flutter test
+      - run: flutter build apk
+
       - name: Install dependencies
         run: dart pub get
 
