--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -42,13 +42,21 @@ jobs:
       
       #- name: Run tests
       #  run: dart test
-
-      - name: Run-Lint
-        run: ./gradlew lint
-      #  working-directory: 
-      - name: Upload html test report
-        uses: actions/upload-artifact@v2
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()    # run this step even if previous step failed
         with:
-          name: lint_html_report
-          path: .github
+          name: JEST Tests            # Name of the check run which will be created
+          path: reports/jest-*.xml    # Path to test results
+          reporter: jest-junit        # Format of test results
+
+
+#      - name: Run-Lint
+#        run: ./gradlew lint
+#      #  working-directory: 
+#      - name: Upload html test report
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: lint_html_report
+#          path: .github
 # This is a basic workflow to help you get started with Actions
