--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -42,13 +42,6 @@ jobs:
       
       #- name: Run tests
       #  run: dart test
-      - name: Test Report
-        uses: dorny/test-reporter@v1
-        if: success() || failure()    # run this step even if previous step failed
-        with:
-          name: Tests            # Name of the check run which will be created
-          path: reports/test.xml    # Path to test results
-          reporter: jest-junit        # Format of test results
 
 # This is a basic workflow to help you get started with Actions
   report:
@@ -58,5 +51,5 @@ jobs:
       with:
         artifact: test-results            # artifact name
         name: DART Tests                  # Name of the check run which will be created
-        path: '*.xml'                     # Path to test results (inside artifact .zip)
+        path: 'test/test.xml'                     # Path to test results (inside artifact .zip)
         reporter: dart-json              # Format of test results
