--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -36,6 +36,15 @@ jobs:
       - name: Analyze project source
         run: dart analyze
 
+
+      - run: flutter build apk
+    
+    # Upload generated apk to the artifacts.
+      - uses: actions/upload-artifact@v1
+        with:
+          name: release-apk
+          path: build/app/outputs/apk/release/app-release.apk
+
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
@@ -44,12 +53,14 @@ jobs:
       #  run: dart test
 
 # This is a basic workflow to help you get started with Actions
-  report:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: dorny/test-reporter@v1
-      with:
-        artifact: test-results            # artifact name
-        name: DART Tests                  # Name of the check run which will be created
-        path: 'test/test.xml'                     # Path to test results (inside artifact .zip)
-        reporter: dart-json              # Format of test results
+
+
+#  report:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: dorny/test-reporter@v1
+#      with:
+#        artifact: test-results            # artifact name
+#        name: DART Tests                  # Name of the check run which will be created
+#        path: 'test/test.xml'                     # Path to test results (inside artifact .zip)
+#        reporter: dart-json              # Format of test results
