--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,66 +1,49 @@
-name: Dart
+name: Flutter CI
+
+# This workflow is triggered on pushes to the repository.
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+    branches:
+    - master
+    
+# on: push    # Default will running for every branch.
+    
 jobs:
   build:
+    # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
-
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '2.0.4'
-      - run: flutter pub get
-      - run: flutter test
-
-      #- name: Install dependencies
-      #  run: dart pub get
-
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
-
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
-
-
-      - run: flutter build apk
+    
+    # Setup Java environment in order to build the Android app.
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    
+    # Setup the flutter environment.
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'beta' # 'dev', 'alpha', default to: 'stable'
+        # flutter-version: '1.12.x' # you can also specify exact version of flutter
+    
+    # Get flutter dependencies.
+    - run: flutter pub get
+    
+    # Check for any formatting issues in the code.
+    - run: flutter format --set-exit-if-changed .
+    
+    # Statically analyze the Dart code for any errors.
+    - run: flutter analyze .
+    
+    # Run widget tests for our flutter project.
+    - run: flutter test
+    
+    # Build apk.
+    - run: flutter build apk
     
     # Upload generated apk to the artifacts.
-      - uses: actions/upload-artifact@v1
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
-
-      # Your project will need to have tests in test/ and a dependency on
-      # package:test for this step to succeed. Note that Flutter projects will
-      # want to change this to 'flutter test'.
-      
-      #- name: Run tests
-      #  run: dart test
-
-# This is a basic workflow to help you get started with Actions
-
-
-#  report:
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: dorny/test-reporter@v1
-#      with:
-#        artifact: test-results            # artifact name
-#        name: DART Tests                  # Name of the check run which will be created
-#        path: 'test/test.xml'                     # Path to test results (inside artifact .zip)
-#        reporter: dart-json              # Format of test results
+    - uses: actions/upload-artifact@v1
+      with:
+        name: release-apk
+        path: build/app/outputs/apk/release/app-release.apk
